--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint src --max-warnings=0",
     "postinstall": "husky install"
   },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
+  },
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
@@ -25,6 +30,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
     "typescript": "^4.2.4"
   }
