--- a/.prettierrc
+++ b/.prettierrc
@@ -2,4 +2,7 @@
   "trailingComma": "none",
   "semi": false,
   "singleQuote": true,
+  "prettier/prettier": ["error", {
+    "endOfLine":"auto"
+  }]
 }
